# carbot

./: .dockerignore  .gitignore  Dockerfile  IMAGE_MANAGEMENT_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTELLIGENT_EXTRACTION_SUCCESS.md  POC_ROADMAP.md  POC_STATUS.md  README.md  SCRAPER_SUCCESS.md  SETUP.md  alembic.ini  blueprint.md  docker-compose.yml  pyproject.toml  workspace.yaml
api/: main.py  schemas.py
api/routes/: cars.py  health.py  ml.py
api/templates/: index.html  ml_dashboard.html
config/: __init__.py  settings.py
datasets/label_studio/: README.md
db/: __init__.py  database.py  models.py
db/migrations/: env.py
db/migrations/versions/: 2025_10_05_1223-40f711b6842c_add_dealer_and_car_specification_fields.py  2025_10_05_1304-6b7fb424ec8f_add_local_image_paths_field.py  2025_10_05_1655-3777eb07e199_add_detected_color_fields_to_.py  2025_10_06_2121-788c99d6b75d_refactor_schema_for_ads_and_images.py  2025_10_08_1313-5e6c8c61085f_create_full_normalized_schema.py  2025_10_10_1716-ba30e07d1c45_create_schema_with_unit_specific_columns.py  2025_10_10_2138-82223e0caac2_increase_string_column_lengths_for_specs.py
docs/: SCHEMA.md  blueprint.md
ml/: __init__.py  anomaly_detector.py  dataset_exporter.py  image_analyzer.py  infer_color.py  price_predictor.py  yolo_runner.py
orchestration/: __init__.py  jobs.py  resources.py
scraper/: __init__.py  image_downloader.py  image_manager.py  intelligent_extractor.py  main.py
scraper/configs/: bmw_m5_2019plus.json
scraper/sites/: mobile_bg.py
scripts/: canonical_structure.json  check_enriched.py  check_env.py  clear_db.py  collecting_cars_pw.py  init_db.py  seed_canonical_data.py  test_db_connection.py
scripts/autoevolution/: README.md  SUMMARY.md  __init__.py  config.py  database.py  main.py  parsers.py  scraper.py  spec_extractor.py  unit_parser.py
